--- a/web_client/templates/base.html
+++ b/web_client/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'stylesheet.css' %}">
-    <title>AutoMarket</title>
+    <title>CareerFinder</title>
 </head>
 <body>
 <div class="container">
