Adds navbar to homepage. Adds base js file. Applies new font to project.

--- a/web_client/static/stylesheet.css
+++ b/web_client/static/stylesheet.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i');
 
-body{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    color: #555;
-    margin: 0;
-    padding: 0;
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+}
+
+.box-shadow {
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
