--- a/web_client/templates/base.html
+++ b/web_client/templates/base.html
@@ -17,7 +17,7 @@
 
 <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
-{#<script src="{% static 'scripts/script.js' %}"></script>#}
+<script src="{% static 'script.js' %}"></script>
 {% block customscript %}{% endblock %}
 </body>
 </html>
